--- a/cb.htm
+++ b/cb.htm
@@ -3,11 +3,11 @@
   <head>
     <title>Cinst the bot</title>
     <meta charset = 'UFT-8'>
-      <link rel = 'stylesheet' type = 'text/css' href = 'styles/bot.css'>
+      <link rel = 'stylesheet' type = 'text/css' href = 'css/cb.css'>
   </head>
   <body>
     <h1 align = 'center'> Welcome </h1>
-    <script src = 'scripts/new.js' type = 'text/javascript'>
+    <script src = 'js/cb.js' type = 'text/javascript'>
     </script>
   
   </body>
